@@ -1,3 +1,11 @@
+2006-07-03  Michael Natterer  <mitch@gimp.org>
+
+	* app/gui/splash.[ch]: added "be_verbose" parameters and be
+	verbose about which splash image is actually loaded.
+
+	* app/gui/gui.c (gui_init): pass gimp->be_verbose to
+	splash_create().
+
 2006-06-30  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/screenshot.c (select_window_x11): don't leak X
